fixing colour for 'on this page' text on mobile view

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -677,7 +677,7 @@ html[data-theme="dark"] .header-twitter-link::before {
 }
 
 /* light/dark toggle colour */
-.clean-btn {
+.navbar .clean-btn {
   color: var(--linea-text-color-1);
 }
 
